[gd_scene load_steps=16 format=3 uid="uid://e3jqwgerexfo"]

[ext_resource type="Script" uid="uid://d1g4ifompwdu4" path="res://scripts/works.gd" id="1_m1hsh"]
[ext_resource type="Material" uid="uid://crjr13k12egng" path="res://scenes/splash.tres" id="2_kxyc6"]
[ext_resource type="Texture2D" uid="uid://kdt71jk5swyh" path="res://game_assets/icons/user.png" id="3_bysnc"]
[ext_resource type="Theme" uid="uid://cx365ld2mgjne" path="res://resources/theme_base.tres" id="4_5kbvu"]
[ext_resource type="PackedScene" uid="uid://wd63efdi6bdn" path="res://scenes/BaseBComponent.tscn" id="5_bysnc"]
[ext_resource type="Theme" uid="uid://74kwx22ikciq" path="res://resources/theme_headers.tres" id="5_sfqu4"]
[ext_resource type="Material" uid="uid://jm8oyahk342s" path="res://resources/context_menu.tres" id="6_5kbvu"]
[ext_resource type="Script" uid="uid://dqpr2y7tbsc13" path="res://scripts/works_list.gd" id="7_bysnc"]
[ext_resource type="Script" uid="uid://cink4uduoxu4b" path="res://scripts/end.gd" id="8_cmq6o"]
[ext_resource type="Script" uid="uid://dx40hpbce8w60" path="res://scripts/button_config.gd" id="8_jips7"]
[ext_resource type="Script" uid="uid://3iluo5wg2wdh" path="res://scripts/works_unroll.gd" id="9_r0m0m"]
[ext_resource type="Script" uid="uid://cb40vkd5uu1g1" path="res://scripts/edit_graph.gd" id="12_sfqu4"]

[sub_resource type="Resource" id="Resource_jips7"]
script = ExtResource("8_jips7")
hover_color = Color(1.3, 1.1, 1.1, 1)
press_color = Color(1.1, 0.9, 0.9, 1)
_press_scale = 0.97
animation_speed = 1.951
animation_decay = 4.564
metadata/_custom_type_script = "uid://dx40hpbce8w60"

[sub_resource type="Resource" id="Resource_sfqu4"]
script = ExtResource("8_jips7")
hover_color = Color(1.300188, 1.300188, 1.300188, 1)
hover_mult = 1.15
_hover_scale = 1.02
press_color = Color(1.1, 0.9, 0.9, 1)
_press_scale = 0.97
animation_speed = 1.951
animation_decay = 4.564
metadata/_custom_type_script = "uid://dx40hpbce8w60"

[sub_resource type="Resource" id="Resource_5kbvu"]
script = ExtResource("8_jips7")
as_mult = true
hover_color = Color(1.1, 1.1, 1.1, 1)
hover_mult = 1.3
_hover_scale = 1.05
press_color = Color(0.72, 0.72, 0.72, 1)
_press_scale = 0.98
animation_scale = 19.697
animation_speed = 3.473
animation_decay = 6.0
animation_duration = 1.359
metadata/_custom_type_script = "uid://dx40hpbce8w60"

[node name="Node2D" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_m1hsh")
typename = "works"

[node name="delete_project" parent="." instance=ExtResource("5_bysnc")]
z_index = 90
material = ExtResource("6_5kbvu")
instance_shader_parameters/extents = Vector2(0, 0)
instance_shader_parameters/tuning = Color(0.51, 0.51, 0.51, 0.439216)
layout_mode = 0
offset_right = 159.0
offset_bottom = 46.0
scale = Vector2(0.75, 0.75)
script = ExtResource("12_sfqu4")
text_alignment = Vector2(-1, 0)
text_offset = Vector2(15, 0)
base_size = Vector2(159, 46)
_scroll_container = false
expanded_size = 96
scale_anim = true
mouse_open = false
menu_name = &"delete_project"
max_size = 0
config = null
in_splash = true
still_hover_in_block = true

[node name="delete" parent="delete_project" instance=ExtResource("5_bysnc")]
z_index = 2
instance_shader_parameters/extents = Vector2(0, 0)
instance_shader_parameters/outline_color = Color(0.95, 0.418, 0.418, 1)
instance_shader_parameters/tuning = Color(0.44, 0.2244, 0.2244, 0.639216)
layout_mode = 0
offset_left = 4.0
offset_top = 33.0
offset_right = 105.0
offset_bottom = 74.0
pivot_offset = Vector2(50.5, 20.5)
button_type = 1
text = "Delete"
base_size = Vector2(101, 41)
alignment = Vector2(0.5, 0.5)
mouse_open = false
config = SubResource("Resource_jips7")
in_splash = true

[node name="ColorRect" type="ColorRect" parent="."]
z_index = 8
material = ExtResource("2_kxyc6")
instance_shader_parameters/corner_radius_width_add = Vector2(9.365, 1)
instance_shader_parameters/outline_color = Color(0.85, 0.85, 0.85, 1)
instance_shader_parameters/tuning = Color(0, 0, 0, 0.7529412)
layout_mode = 0
offset_left = 326.0
offset_top = 99.0
offset_right = 848.0
offset_bottom = 522.0

[node name="root" type="Control" parent="ColorRect"]
layout_mode = 1
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="i" type="Sprite2D" parent="ColorRect/root"]
position = Vector2(23.000015, 21)
scale = Vector2(0.9496938, 0.9496938)
texture = ExtResource("3_bysnc")

[node name="Label" type="Label" parent="ColorRect/root"]
modulate = Color(0.41, 0.41, 0.41, 1)
z_index = 1
layout_mode = 0
offset_left = 36.0
offset_top = 9.0
offset_right = 140.84766
offset_bottom = 52.0
scale = Vector2(0.600218, 0.600218)
theme = ExtResource("4_5kbvu")
text = "/projects"

[node name="list" parent="ColorRect" instance=ExtResource("5_bysnc")]
z_index = 3
material = ExtResource("6_5kbvu")
instance_shader_parameters/extents = Vector2(0, 0)
instance_shader_parameters/outline_color = Color(1, 1, 1, 0)
instance_shader_parameters/tuning = Color(0.509804, 0.509804, 0.509804, 0.439216)
layout_mode = 0
offset_left = 20.99999
offset_top = 123.0
offset_right = 556.5556
offset_bottom = 123.0
scale = Vector2(0.9, 0.9)
color = Color(1, 1, 1, 0)
script = ExtResource("7_bysnc")
top = true
base_size = Vector2(535.5556, 0)
static_mode = true
mouse_open = false
dynamic_size = true
max_size = 300
config = null
in_splash = true

[node name="name" parent="ColorRect/list" instance=ExtResource("5_bysnc")]
z_index = 5
instance_shader_parameters/extents = Vector2(0, 0)
instance_shader_parameters/outline_color = Color(0.43137255, 0.5882353, 0.9019608, 1)
instance_shader_parameters/tuning = Color(0.26400003, 0.3593334, 0.55, 0.5647059)
layout_mode = 0
offset_left = 200.0
offset_top = 221.333
offset_right = 436.0
offset_bottom = 296.6667
pivot_offset = Vector2(118, 37.666847)
button_type = 1
placeholder = true
auto_trim_text = true
text = "Hello!!"
text_alignment = Vector2(-1, -1)
text_offset = Vector2(15, 15)
base_size = Vector2(236, 75.333694)
alignment = Vector2(0.5, 0.5)
mouse_open = false
config = SubResource("Resource_sfqu4")
in_splash = true
still_hover_in_block = true

[node name="ProceduralNodes" type="Node" parent="ColorRect/list" node_paths=PackedStringArray("instance")]
script = ExtResource("9_r0m0m")
instance = NodePath("../name")
metadata/_custom_type_script = "uid://cppqde4187p8n"

[node name="Label" type="Label" parent="ColorRect"]
layout_mode = 0
offset_left = 34.0
offset_top = 40.0
offset_right = 485.0
offset_bottom = 77.0
theme = ExtResource("5_sfqu4")
text = "Username"

[node name="train" parent="ColorRect" instance=ExtResource("5_bysnc")]
instance_shader_parameters/corner_radius_width_add = Vector2(-9, 0)
instance_shader_parameters/extents = Vector2(0, 0)
layout_mode = 1
offset_left = 39.0
offset_top = 82.00001
offset_right = 108.231964
offset_bottom = 107.00001
scale = Vector2(1.1770253, 1.1770253)
pivot_offset = Vector2(34.615982, 12.5)
mouse_filter = 1
color = Color(0.59, 0.59, 0.59, 1)
button_type = 1
top = true
hint = &"login"
base_scale_x = 0.45
resize_after = 6
text = "Logout"
base_size = Vector2(69.231964, 25)
alignment = Vector2(0.5, 0.5)
expanded_size = 98
arrangement_padding = Vector2(5, 5)
mouse_open = false
menu_name = &"g"
max_size = 170
config = SubResource("Resource_5kbvu")
in_splash = true

[node name="train2" parent="ColorRect" instance=ExtResource("5_bysnc")]
instance_shader_parameters/corner_radius_width_add = Vector2(-9, 0)
instance_shader_parameters/extents = Vector2(0, 0)
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -93.8721
offset_top = 82.00002
offset_right = -35.79361
offset_bottom = 107.00002
grow_horizontal = 0
scale = Vector2(1.1770253, 1.1770253)
pivot_offset = Vector2(29.039246, 12.5)
mouse_filter = 1
color = Color(0.6045, 0.93, 0.631625, 1)
button_type = 1
top = true
hint = &"login"
base_scale_x = 0.45
resize_after = 6
text = "+ New"
base_size = Vector2(58.07849, 25)
alignment = Vector2(0.5, 0.5)
expanded_size = 98
arrangement_padding = Vector2(5, 5)
mouse_open = false
menu_name = &"g"
max_size = 170
config = SubResource("Resource_5kbvu")
in_splash = true

[node name="Node" type="Node" parent="."]
script = ExtResource("8_cmq6o")

[connection signal="child_button_release" from="ColorRect/list" to="." method="_on_list_child_button_release"]
[connection signal="released" from="ColorRect/train" to="." method="_on_logout"]
[connection signal="released" from="ColorRect/train2" to="." method="_on_add"]
